--- a/rocketmq/Dockerfile-centos
+++ b/rocketmq/Dockerfile-centos
@@ -26,7 +26,7 @@ ARG version=4.5.2
 
 RUN set -eux \
     && yum -y update \
-    && yum -y install curl gnupg unzip vim\
+    && yum -y install curl gnupg unzip \
     && yum clean all -y
 
 RUN curl -L https://archive.apache.org/dist/rocketmq/${version}/rocketmq-all-${version}-bin-release.zip -o rocketmq.zip \
